@@ -1,6 +1,7 @@
 package com.shoestore.client.controllers;
 
 import com.shoestore.client.client.CartClient;
+import com.shoestore.client.client.ProductClient;
 import com.shoestore.client.dto.request.*;
 import com.shoestore.client.dto.response.CartItemResponseDTO;
 import com.shoestore.client.service.CartItemService;
@@ -12,9 +13,9 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
 import java.text.DecimalFormat;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
@@ -34,60 +35,84 @@ public class CartController {
     private HttpSession session;
     @Autowired
     private CartClient cartClient;
+    @Autowired
+    private ProductClient productClient;
     private static final DecimalFormat DECIMAL_FORMAT = new DecimalFormat("#,###");
 
-    // Hiển thị giỏ hàng
     @GetMapping("/show")
     public String showCart(Model model) {
-        UserDTO user = (UserDTO) session.getAttribute("user");
-
-        List<CartItemResponseDTO> cartItems;
-
-        if (user == null) {
-            // Khách chưa đăng nhập -> lấy giỏ hàng từ session attribute "guestCart"
-            cartItems = (List<CartItemResponseDTO>) session.getAttribute("guestCart");
-            if (cartItems == null) {
-                cartItems = new ArrayList<>(); // giỏ hàng rỗng cho guest
-            }
-            model.addAttribute("cartItems", cartItems);
-            return "page/Customer/Cart";
+        if (session.getAttribute("user") == null) {
+            return "redirect:/login";
         }
 
-        // Nếu có user đăng nhập, lấy giỏ hàng từ cart-service qua FeignClient
+        UserDTO user = (UserDTO) session.getAttribute("user");
+        if (user == null) {
+            return "redirect:/login";
+        }
+
         int userId = user.getUserID();
         CartDTO cartDTO = cartClient.getCartByUserId(userId);
+
         if (cartDTO == null || cartDTO.getCartItems() == null) {
-            model.addAttribute("cartItems", Collections.emptyList());
+            model.addAttribute("cartItems", List.of());
             return "page/Customer/Cart";
         }
 
-        cartItems = cartDTO.getCartItems();
+        List<CartItemResponseDTO> cartItems = cartDTO.getCartItems();
 
-        // Bổ sung thông tin sản phẩm cho từng item
         cartItems.forEach(item -> {
-            ProductDTO productDTO = productService.getProductByProductDetail(item.getId().getProductDetailId());
-            ProductDetailDTO productDetailDTO = productDetailService.getProductDetailById(item.getId().getProductDetailId());
+            int productDetailId = item.getId().getProductDetailId();
 
-            item.setProductName(productDTO.getProductName());
-            item.setProductPrice(productDTO.getPrice());
-            item.setColor(productDetailDTO.getColor());
-            item.setSize(productDetailDTO.getSize());
-            item.setProductId(productDTO.getProductID());
-            item.setStockQuantity(productDetailDTO.getStockQuantity());
-            if (productDTO.getImageURL() != null && !productDTO.getImageURL().isEmpty()) {
+            try {
+                System.out.println("➡️ Đang xử lý productDetailId = " + productDetailId);
+
+                ProductDetailDTO productDetailDTO = productClient.getProductDetailById(productDetailId);
+                System.out.println("📦 productDetailDTO = " + productDetailDTO);
+
+                if (productDetailDTO == null) {
+                    System.err.println("❌ productDetailDTO null cho ID: " + productDetailId);
+                    return;
+                }
+
+                ProductDTO productDTO = productClient.getProductById(productDetailDTO.getProductID());
+
+                item.setProductName(productDTO.getProductName());
                 item.setProductImage(productDTO.getImageURL());
+                item.setProductPrice(productDTO.getPrice());
+                item.setProductId(productDTO.getProductID());
+                item.setColor(ColorDTO.valueOf(productDetailDTO.getColor()));
+                item.setSize(SizeDTO.valueOf(productDetailDTO.getSize()));
+
+                System.out.println("📊 stockQuantity nhận từ BE = " + productDetailDTO.getStockQuantity());
+                // nếu cần dùng trong template
+                item.setStockQuantity(100);// gán ngay sau
+                System.out.println("🧪 item class = " + item.getClass().getName());
+
+
+                System.out.println("✅ Sau gán: item.stockQuantity = " + item.getStockQuantity());
+
+            } catch (Exception e) {
+                System.err.println("⚠️ Lỗi khi gọi ProductClient với productDetailId: " + productDetailId + " - " + e.getMessage());
             }
         });
 
+// Sau khi xử lý tất cả item
+        System.out.println("\n======== TOÀN BỘ CART ITEMS nè =========");
+        cartItems.forEach(it ->
+                System.out.println("🛒 [" + it.getProductName() + "] - stock = " + it.getStockQuantity())
+        );
+
         model.addAttribute("cartItems", cartItems);
         return "page/Customer/Cart";
+
     }
+
 
 
     @PostMapping("/add")
     public String addCartItem(@RequestParam("productDetailID") int productDetailID,
                               @RequestParam("quantity") int quantity,
-                              Model model) {
+                              RedirectAttributes redirectAttributes) {
         if (session.getAttribute("user") == null) {
             return "redirect:/login";
         }
@@ -99,14 +124,12 @@ public class CartController {
 
         int userId = user.getUserID();
         CartDTO cartDTO = cartService.getCartByUserId(userId);
+
         if (cartDTO == null) {
-            // Nếu giỏ hàng chưa tồn tại, xử lý tùy vào logic hệ thống của bạn
             return "redirect:/customer/cart/show";
         }
 
         CartItemDTO.IdDTO idDTO = new CartItemDTO.IdDTO(cartDTO.getCartID(), productDetailID);
-
-        // Tạo CartItemDTO mới
         CartItemDTO newCartItem = new CartItemDTO();
         newCartItem.setId(idDTO);
         newCartItem.setQuantity(quantity);
@@ -114,13 +137,16 @@ public class CartController {
         newCartItem.setProductDetailDTO(productDetailService.getProductDetailById(productDetailID));
 
         try {
-            cartClient.addCartItem(newCartItem);  // Gọi tới BE qua Feign
+            cartClient.addCartItem(newCartItem);
+            redirectAttributes.addFlashAttribute("successMessage", "✅ Thêm vào giỏ hàng thành công!");
         } catch (Exception e) {
-            System.out.println("❌ Lỗi khi gọi CartClient.addCartItem: " + e.getMessage());
+            e.printStackTrace(); // 👈 thêm dòng này để hiện lỗi rõ ràng
+            redirectAttributes.addFlashAttribute("errorMessage", "❌ Lỗi khi thêm vào giỏ hàng: " + e.getMessage());
         }
 
         return "redirect:/customer/cart/show";
     }
+
 
     @DeleteMapping("/delete/{cartId}/{productDetailId}")
     public String deleteCartItem(@PathVariable("cartId") int cartId,
